Fix scrollbar and change class names

--- a/modalon.css
+++ b/modalon.css
@@ -5,7 +5,7 @@
 body {
   overflow: auto;
 }
-.modal-bg {
+.modal {
   display: none;
   position: fixed;
   top: 0;
@@ -13,63 +13,59 @@ body {
   bottom: 0;
   left: 0;
   background-color: rgba(0, 0, 0, 0.5);
+  padding: 30px 0;
+  overflow: auto;
   z-index: 1010;
 }
-.modal {
+.modal-content {
   display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  margin: auto;
   width: 90%;
-  background-color: #FAFAFA;
+  background-color: #FFF;
+  margin: auto;
   border-radius: 4px;
-  margin-top: 30px;
   z-index: 1050;
 }
 @media (min-width: 768px) {
-  .modal {
+  .modal-content {
     width: 85%;
   }
 }
 @media (min-width: 992px) {
-  .modal {
+  .modal-content {
     width: 80%;
   }
 }
 @media (min-width: 1200px) {
-  .modal {
+  .modal-content {
     width: 75%;
     max-width: 1000px;
   }
 }
 .modal .modal-header:after,
-.modal .modal-content:after,
-.modal .modal-footer:after {
+.modal .modal-body:after {
   display: table;
   content: " ";
   clear: both;
 }
 .modal .modal-header:before,
-.modal .modal-content:before,
-.modal .modal-footer:before {
+.modal .modal-body:before {
   display: table;
   content: " ";
 }
 .modal .modal-header,
-.modal .modal-content,
-.modal .modal-footer {
+.modal .modal-body {
   padding: 15px;
+}
+.modal :first-child {
+  margin-top: 0;
 }
 .modal :last-child {
   margin-bottom: 0;
 }
 .modal .modal-header {
-  border-bottom: 1px solid #DDD;
+  border-bottom: 1px solid #E5E5E5;
   border-radius: 4px 4px 0 0;
 }
-.modal .modal-footer {
-  border-top: 1px solid #DDD;
+.modal .modal-body {
   border-radius: 0 0 4px 4px;
 }
